# aoc-hardcaml

./: README.md  aoc-hardcaml.opam  dune-project
lib/: dune
lib/counter/: counter.ml  dune
src/Day1/: dune  hardware.ml  main.ml
src/Day1Part1/: dune  hardware.ml  main.ml
src/Day2/: dune  hardware.ml  main.ml
src/Day3/: dune  hardware.ml  main.ml
src/Day4/: dune  hardware.ml  main.ml
src/Day5/: dune  hardware.ml  main.ml
src/Day6/: dune  hardware.ml  main.ml
src/Day7/: dune  hardware.ml  main.ml
src/Day8/: dune  hardware.ml  main.ml  reference.py
src/RamTesting/: dune  main.ml
src/counter/: counter.ml  dune  main.ml
test/: dune
test/counter/: dune  test_aoc_hardcaml.ml
