(lang dune 3.20)

(name aoc-hardcaml)

(generate_opam_files true)

(source
 (github VirtualMe64/aoc-hardcaml))

(package
 (name aoc-hardcaml)
 (synopsis "Advent of Code solutions implemented in Hardcaml")
 (description "My submission to the Advent of FPGA challenge -- Advent of Code implemented in Hardcaml.")
 (depends ocaml))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
