; (executable
;  (name main)
;  (public_name day4)
;  (modules main)
;  (libraries hardcaml hardware_day3)
;  (preprocess
;   (pps ppx_jane ppx_hardcaml)))

(library
 (name hardware_day4)
 (modules hardware)
 (inline_tests)
 (preprocess (pps ppx_jane ppx_hardcaml))
 (libraries hardcaml hardcaml_waveterm))